.devdev/k8s-homelab-eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  namespace: main
spec:
  ingressClassName: alb
  rules:
    - host: nginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: python3app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python3app
                port:
                  number: 8000
